# turnbased_game

./: Bot.cpp  Bot.h  CMakeLists.txt  Game.cpp  Game.h  Reversi.cpp  Reversi.h  connect4.cpp  connect4.h  main.cpp  tests.cpp  tictactoe.cpp  tictactoe.h
src/: Bot.h  Game.cpp  Game.h  main.cpp  tictactoe.cpp  tictactoe.h
unused/: connect4.h  main.cpp  tests.cpp
